--- a/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj
+++ b/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="src\34_audio_recording.cpp" />
     <ClCompile Include="src\35_window_event.cpp" />
     <ClCompile Include="src\36_mutiple_windows.cpp" />
+    <ClCompile Include="src\37_mutiple_displays.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\arrow.png" />
