--- a/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj
+++ b/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="src\37_mutiple_displays.cpp" />
     <ClCompile Include="src\38_particle_engine.cpp" />
     <ClCompile Include="src\39_tiling.cpp" />
+    <ClCompile Include="src\40_texture_manipulation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\arrow.png" />
@@ -219,6 +220,7 @@
     <Image Include="assets\spark_c.png" />
     <Image Include="assets\spheres.png" />
     <Image Include="assets\squares.png" />
+    <Image Include="assets\stickfigure.png" />
     <Image Include="assets\thanksgiving_dinner.png" />
     <Image Include="assets\up.bmp" />
     <Image Include="assets\up.png" />
