--- a/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj.filters
+++ b/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="src\39_tiling.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\40_texture_manipulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\HelloWorld.bmp">
@@ -252,6 +255,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="assets\knight.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\stickfigure.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
