--- a/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj.filters
+++ b/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj.filters
@@ -135,6 +135,21 @@
     <ClCompile Include="src\40_texture_manipulation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\42_texture_streaming.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\41_bitmap_fonts.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\43_render_to_texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\44_frame_independent_movement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\45_timer_callbacks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\HelloWorld.bmp">
@@ -258,6 +273,30 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="assets\stickfigure.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\ToniaFont.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\skate_anim_1_0.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\skate_anim_1_1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\skate_anim_1_2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\skate_anim_1_3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\its_a_loop.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\jellyfish.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\jellyfish_bckgrnd.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
