--- a/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj
+++ b/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj
@@ -188,6 +188,10 @@
     <ClCompile Include="src\43_render_to_texture.cpp" />
     <ClCompile Include="src\44_frame_independent_movement.cpp" />
     <ClCompile Include="src\45_timer_callbacks.cpp" />
+    <ClCompile Include="src\46_multithreading.cpp" />
+    <ClCompile Include="src\47_semaphores.cpp" />
+    <ClCompile Include="src\48_atomic_operations.cpp" />
+    <ClCompile Include="src\49_mutex_conditions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\arrow.png" />
