--- a/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj.filters
+++ b/LazyFooSDLTutorial/LazyFooSDLTutorial.vcxproj.filters
@@ -162,6 +162,12 @@
     <ClCompile Include="src\49_mutex_conditions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\50_SDL_OpenGL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="glad\src\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\HelloWorld.bmp">
